Fix alignment in dependency panes

--- a/styles/dependency.less
+++ b/styles/dependency.less
@@ -9,7 +9,7 @@
   padding: 0 0 0 5px;
 
   .align {
-    width: 50%;
+    flex: none;
   }
 
   #options {
